# NeuroFlow-HiDevs

./: README.md
NeuroFlow-HiDevs/: .env.example  .gitignore  pyproject.toml
NeuroFlow-HiDevs/.github/workflows/: build.yml  ci.yml  quality-gate.yml
NeuroFlow-HiDevs/backend/: Dockerfile  requirements.txt
NeuroFlow-HiDevs/backend/api/: admin.py  auth.py  evaluations.py  pipelines.py
NeuroFlow-HiDevs/backend/evaluation/: metrics.py
NeuroFlow-HiDevs/backend/models/: pipeline.py
NeuroFlow-HiDevs/backend/monitoring/: metrics.py
NeuroFlow-HiDevs/backend/pipelines/finetuning/: pipeline.py
NeuroFlow-HiDevs/backend/pipelines/ingestion/: chunker.py
NeuroFlow-HiDevs/backend/pipelines/retrieval/: context_assembler.py
NeuroFlow-HiDevs/backend/providers/: anthropic_provider.py  base.py  groq_provider.py
NeuroFlow-HiDevs/backend/resilience/: circuit_breaker.py  rate_limiter.py
NeuroFlow-HiDevs/docs/: architecture.md  data-models.md  deployment.md  retrospective.md  runbook.md
NeuroFlow-HiDevs/docs/adr/: 001-vector-store.md  002-chunking-strategy.md  003-evaluation-framework.md  004-model-routing.md
NeuroFlow-HiDevs/evaluation/: quality_baseline.json
NeuroFlow-HiDevs/frontend/: Dockerfile
NeuroFlow-HiDevs/infra/nginx/: nginx.conf
NeuroFlow-HiDevs/infra/prometheus/: alerts.yml
NeuroFlow-HiDevs/sdk/: README.md
NeuroFlow-HiDevs/sdk/neuroflow/: __init__.py  client.py
NeuroFlow-HiDevs/tests/benchmarks/: retrieval_benchmark.py
NeuroFlow-HiDevs/tests/unit/: test_chunker.py  test_pipeline_config.py
backend/: config.py  main.py  (+1 more)
sdk/: pyproject.toml
(+35 files in other folders)
